# thrust

./: .gitignore  Cargo.toml  README.md
axum-crud/: Cargo.toml
crates/advent_of_code/: Cargo.toml
crates/advent_of_code/src/: lib.rs  main.rs
crates/axum_crud/: Cargo.toml
crates/axum_crud/src/: github.rs  main.rs
crates/crud_api/: Cargo.toml
crates/crud_api/src/: controller.rs  main.rs  model.rs  user_service.rs
crates/md_badges/src/: cli.rs  icon.rs  main.rs
crud-api/: Cargo.toml
crud-api/src/: main.rs
md_badges/: Cargo.toml  README.md
md_badges/src/: cli.rs  data.rs  icon.rs  main.rs
projects/rlog/: Cargo.toml  README.md
projects/rlog/migrations/2026-01-15-064254-0000_repos/: up.sql
projects/rlog/migrations/2026-01-15-064304-0000_repo_releases/: down.sql  up.sql
projects/rlog/src/: args.rs  db.rs  main.rs  schema.rs
projects/rlog/src/models/: repo.rs  repo_release.rs
projects/rlog/src/ops/: add.rs  list.rs  mod.rs  remove.rs  show.rs
projects/rlog/src/sql/: mod.rs  repo.rs  repo_release.rs
projects/rlog/src/utils/: markdown.rs  mod.rs  table.rs
src/: main.rs
