[package]
name = "crud_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
env_logger = "0.11.8"
log = "0.4.28"
rusqlite = "0.32.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
